--- a/final/frontend/package.json
+++ b/final/frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.4"
   }
 }
